** 0.0.9b **

Added 'Enable enhancements for touch devices' to settings. Currently allows "flinging" the guide

** 0.0.8b **

Video now closes when the addon exits with a settings option to disable this behavior
Now, when entering channel numbers, select now inserts a period with a second select sumbitting the entry
Now when a channel is entered via channel entry, the guide jumps to that channel
Improved control focus when using mouse and keyboard
Transcoding profile setting now has [Default = use tuner profile] and [None = no transcoding]
Now displays an error notification on failure to load a channel
Add WIP search which returns matches for currently playing channels

** 0.0.7b **

Disable showing Kodi OSD on click
Clicking on video with mouse now shows/hides channel guide
Hitting select will now show the channel guide
Now uses more mouse/touch friendly scrolling on channel guide
Now fetches guide data for all devices
Added channel entry via remote numbers or keyboard numpad
Added the ability to select transcode profiles in settings
Added stream metadata to the currently playing OSD

** 0.0.6b **

Fix for error when parsing empty lineups causing no channels to be added

** 0.0.5b **

Improved error handling for case where no channels are found

** 0.0.4b **

Fix for errors on channel numbers without sub channel

** 0.0.3b **

Fix for startup failure if any devices did not respond correctly
Added error handling for no devices, no compatible devices and other errors

** 0.0.2b **

Internal release

** 0.0.1b **

Initial creation