@@ -1,7 +1,7 @@
 ﻿<?xml version="1.0" encoding="UTF-8" standalone="yes"?>
 <addon id="script.hdhomerun.view"
        name="HDHomeRun"
-       version="0.0.9a1"
+       version="0.0.9b"
        provider-name="SiliconDust">
     <requires>
         <import addon="xbmc.python" version="2.1.0"/>
