@@ -7,6 +7,7 @@
     <setting id="exit.stops.player" type="bool" label="32020" default="true" />
     <setting id="touch.mode" type="bool" label="32027" default="false" />
     <setting id="transcode" type="enum" label="32019" lvalues="32507|32500|32501|32502|32503|32504|32505|32506" default="0" />
+    <setting id="show.DRM" type="bool" label="32028" default="false" />
     <setting id="debug" type="bool" label="32003" default="false" />
   </category>
 
